--- a/styles.css
+++ b/styles.css
@@ -80,6 +80,11 @@ body{
     height: 170px;
 }
 
+.tarjetaPokemon:hover{
+    transform: scale(1.1);
+    transition: .2s;
+}
+
 .idPokemon{
     color: gray;
 }
